# keeBLEr

./: .gitignore  README.md
.github/workflows/: build-firmware.yml  deploy-pages.yml  release.yml
docker/: .env.example  Dockerfile  docker-compose.yml  nginx.conf
docs/: av-mode.md  bench-setup.md  c64-mode.md  c64-ultimate-usb-research.md  led-status.md
docs/c64-reference/: c64-api-calls.md  c64-config.md  c64-file-types.md  c64-howto-index.md  c64-wifi.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/main/: CMakeLists.txt  ble_transport.c  ble_transport.h  board_config.h  hid_bridge.c  hid_bridge.h  idf_component.yml  led_status.c  led_status.h  main.c  protocol.h  serial_transport.c  serial_transport.h  wifi_proxy.c  wifi_proxy.h
web/: app.js  flash.html  index.html  manifest.webmanifest  style.css  sw.js
web/64/: c64-app.js  c64.css  index.html  manifest.webmanifest
web/av/: av-app.js  index.html  manifest.webmanifest
web/js/: c64.js  capture.js  connection.js  init.js  keyboard.js  keycodes.js  mouse.js  protocol.js  state.js  ui.js  wifi.js
web/manifests/: devkitc1.json  generic.json  qtpy.json  supermini.json  xiao.json
